[gd_scene load_steps=16 format=3 uid="uid://mg2iahrnvdn2"]

[ext_resource type="PackedScene" uid="uid://dn0lireecrx32" path="res://src/objects/props/office_chair.tscn" id="1_7kklu"]
[ext_resource type="Script" path="res://src/objects/props/single_workstation.gd" id="1_v8leg"]
[ext_resource type="PackedScene" uid="uid://bcquqombag6hf" path="res://src/objects/props/cubicle.tscn" id="2_smvln"]
[ext_resource type="Script" path="res://src/RootModule.gd" id="2_ykoyx"]
[ext_resource type="Script" path="res://src/BaseModule.gd" id="3_n5dp1"]
[ext_resource type="Script" path="res://src/objects/props/LightDisappear.gd" id="3_x7y3m"]
[ext_resource type="Script" path="res://src/objects/props/InteractWithProp.gd" id="4_vgvlu"]
[ext_resource type="Script" path="res://src/objects/props/FirePersonel.gd" id="5_8k4is"]
[ext_resource type="PackedScene" uid="uid://bhp0crcteq87y" path="res://src/objects/npc/npc.tscn" id="6_3pnws"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_138r2"]
radius = 0.8
height = 2.2

[sub_resource type="PlaneMesh" id="PlaneMesh_nh227"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ip0i5"]
cull_mode = 1
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_syeqf"]
resource_name = "fired"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("office_chair:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.73456, -2.38419e-07, 0.036594), Vector3(-2.53929, -2.38419e-07, -0.278344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("office_chair:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -2.27516, 0)]
}

[sub_resource type="Animation" id="Animation_7736j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("office_chair:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.58935, -2.38419e-07, 0.036594)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("office_chair:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_teskx"]
_data = {
"RESET": SubResource("Animation_7736j"),
"fired": SubResource("Animation_syeqf")
}

[node name="SingleWorkstation" type="Node3D"]
transform = Transform3D(5.76205e-08, 0, 1, 0, 1, 0, -1, 0, 5.76205e-08, 0, 0, 0)
script = ExtResource("1_v8leg")

[node name="Modules" type="Node3D" parent="."]
script = ExtResource("2_ykoyx")

[node name="BaseModule" type="Node3D" parent="Modules"]
script = ExtResource("3_n5dp1")

[node name="InteractWithProp" type="Node3D" parent="Modules/BaseModule"]
script = ExtResource("4_vgvlu")
interaction_time = 3.0

[node name="Area3D" type="Area3D" parent="Modules/BaseModule/InteractWithProp"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Modules/BaseModule/InteractWithProp/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65, 1, 0.0500002)
shape = SubResource("CapsuleShape3D_138r2")

[node name="FirePersonel" type="Node3D" parent="Modules/BaseModule/InteractWithProp"]
script = ExtResource("5_8k4is")

[node name="StandMarker" type="Marker3D" parent="Modules/BaseModule/InteractWithProp/FirePersonel"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.30654, -0.00311712, 1.47805e-07)

[node name="LeftTarget" type="Marker3D" parent="."]
transform = Transform3D(-5.64755e-08, 1, 5.51409e-08, -0.198359, 4.28428e-08, -0.980129, -0.980129, -6.6291e-08, 0.198359, -1.14307, 0.975206, -0.277736)

[node name="RightTarget" type="Marker3D" parent="."]
transform = Transform3D(-5.64755e-08, 1, 5.51409e-08, -0.198359, 4.28428e-08, -0.980129, -0.980129, -6.6291e-08, 0.198359, -1.09071, 0.962553, 0.385023)

[node name="office_chair" parent="." instance=ExtResource("1_7kklu")]
transform = Transform3D(7.54979e-08, 0, -1, 0, 1, 0, 1, 0, 7.54979e-08, -1.58935, -2.38419e-07, 0.036594)

[node name="Node3D" type="Node3D" parent="office_chair"]
transform = Transform3D(-0.457886, -0.457886, 0.762025, -0.707107, 0.707107, 0, -0.538833, -0.538833, -0.647548, 0.510913, 0.0184014, -0.273563)

[node name="SpineTarget" type="Marker3D" parent="office_chair/Node3D"]
transform = Transform3D(1.49012e-07, 0, -1, 8.9407e-08, 1, -2.98023e-08, 1, 0, 8.9407e-08, -0.0491025, 1.2009, -0.059009)

[node name="NPC" parent="office_chair" instance=ExtResource("6_3pnws")]
unique_name_in_owner = true
transform = Transform3D(1.2, 0, -1.78814e-07, 0, 1.2, 0, 1.78814e-07, 0, 1.2, 0.000399265, 0.0197391, 0.149061)

[node name="GeneralSkeleton" parent="office_chair/NPC/Modules/Mesh/Root Scene/RootNode" index="0"]
bones/0/position = Vector3(0.00467727, 0.531299, 0.0125825)
bones/0/rotation = Quaternion(-0.0855269, -0.00238249, -0.00847733, 0.996297)
bones/1/rotation = Quaternion(0.174147, 0.033497, -0.0174733, 0.983995)
bones/2/rotation = Quaternion(0.0258734, 0.00832937, -0.00212672, 0.999628)
bones/3/rotation = Quaternion(0.0259492, 0.00804536, -0.00252413, 0.999628)
bones/4/rotation = Quaternion(0.0413664, -0.00837286, -0.000508042, 0.999109)
bones/5/rotation = Quaternion(-0.117111, -0.00151511, 0.0200027, 0.992916)
bones/7/rotation = Quaternion(0.473961, 0.494168, 0.622417, -0.379151)
bones/8/rotation = Quaternion(0.360236, 0.880683, -0.2819, 0.123121)
bones/9/rotation = Quaternion(0.328826, -0.625998, 0.328826, 0.625998)
bones/10/rotation = Quaternion(-0.0827682, 0.865022, 0.176212, 0.462423)
bones/11/rotation = Quaternion(0.0681737, -0.000162203, -0.03742, 0.996971)
bones/12/rotation = Quaternion(0.354666, 6.45278e-08, -0.0363451, 0.934286)
bones/13/rotation = Quaternion(0.0403193, 1.96923e-09, -0.00413194, 0.999178)
bones/15/rotation = Quaternion(0.457196, -0.505291, -0.633135, -0.367142)
bones/16/rotation = Quaternion(-0.473142, 0.859534, -0.192378, -0.0181434)
bones/17/rotation = Quaternion(0.277704, 0.650293, -0.277704, 0.650293)
bones/18/rotation = Quaternion(-0.222139, -0.832313, -0.294392, 0.413814)
bones/19/rotation = Quaternion(0.554248, -0.00108455, 0.0794222, 0.828553)
bones/20/rotation = Quaternion(0.293755, 1.30669e-07, 0.0239301, 0.955581)
bones/21/rotation = Quaternion(0.0600977, 9.84745e-10, 0.00489574, 0.998181)
bones/23/rotation = Quaternion(0.0540687, 0.630858, 0.769399, -0.084383)
bones/24/rotation = Quaternion(0.0734446, 0.710982, -0.698995, -0.0227094)
bones/25/rotation = Quaternion(0.0226423, 0.703869, -0.709655, -0.0211009)
bones/28/rotation = Quaternion(-0.0691577, 0.630679, 0.772561, 0.0247255)
bones/29/rotation = Quaternion(0.0615795, 0.670488, -0.736537, -0.0645535)
bones/30/rotation = Quaternion(-0.0294131, 0.656504, -0.753749, 0.000422543)

[node name="RightIK" parent="office_chair/NPC/Modules/Mesh/Root Scene/RootNode/GeneralSkeleton" index="16"]
target_node = NodePath("../../../../../../../../RightTarget")

[node name="LeftIK" parent="office_chair/NPC/Modules/Mesh/Root Scene/RootNode/GeneralSkeleton" index="17"]
target_node = NodePath("../../../../../../../../LeftTarget")

[node name="SpineIK" parent="office_chair/NPC/Modules/Mesh/Root Scene/RootNode/GeneralSkeleton" index="18"]
target_node = NodePath("../../../../../../../Node3D/SpineTarget")

[node name="cubicle" parent="." instance=ExtResource("2_smvln")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.9, 0)
mesh = SubResource("PlaneMesh_nh227")
surface_material_override/0 = SubResource("StandardMaterial3D_ip0i5")
script = ExtResource("3_x7y3m")

[node name="StandMarker" type="Marker3D" parent="."]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -2.62288, 0, 0.813076)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_teskx")
}

[editable path="office_chair/NPC"]
